Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20578

Got error 126 when executing undo undo_key_delete upon Aria crash recovery

    XMLWordPrintable

Details

    Description

      The failure looks somewhat similar to MDEV-18203, but this one is reproducible on all 10.2+ and does not require encryption (and it's undo_key_delete instead of undo_key_insert), so I'll file it separately.

      10.2 5ec4efb7

      2019-09-13  2:23:05 140564631615296 [Note] mysqld: Aria engine: starting recovery
      recovered pages: 0% 10% 20% 30% 40% 50% 60% 70% 80% 90% 100% (18.4 seconds); transactions to roll back: 1
      Got error 126 when executing undo undo_key_delete
      2019-09-13  2:23:23 140564631615296 [ERROR] mysqld: Aria engine: Undo phase failed
      tables to flush: 9 8 7 6 5 4 3 2 1 0
      2019-09-13  2:23:23 140564631615296 [ERROR] mysqld: Aria recovery failed. Please run aria_chk -r on all Aria tables and delete all aria_log.######## files
      2019-09-13  2:23:23 140564631615296 [ERROR] Plugin 'Aria' init function returned error.
      2019-09-13  2:23:23 140564631615296 [ERROR] Plugin 'Aria' registration as a STORAGE ENGINE failed.
      2019-09-13  2:23:23 140564631615296 [Note] Plugin 'FEEDBACK' is disabled.
      2019-09-13  2:23:23 140564631615296 [ERROR] Aria engine is not enabled or did not start. The Aria engine must be enabled to continue as mysqld was configured with --with-aria-tmp-tables
      2019-09-13  2:23:23 140564631615296 [ERROR] Aborting
      

      Attention: use the RQG branch as described below, it is tuned for reproducing the failure
      Remember to use the correct basedir, and modify vardir if necessary.
      The test fails almost every time for me, but sometimes it misses the mark, just re-run it if it didn't fail.

      git clone https://github.com/MariaDB/randgen --branch mdev20578 rqg-mdev20578
      cd rqg-mdev20578
      perl runall-new.pl --basedir=<basedir> --grammar=./mdev20578.yy --skip-gendata --gendata-advanced --duration=60 --threads=1 --seed=1 --reporter=CrashRecovery --vardir=/dev/shm/mdev20578
      

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3d 7.5h
                  3d 7.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.